Entregable 3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CLAVE_PRIMA
    CLAVE_REFERENTE
    COMO_MUCHO
    ES_NULO
    EXISTE
    ORDENA_POR
    PARECIDO_A
    POR_DEFECTO
    TRANSFORMA_A
    UNICO

Grammar

Rule 0     S' -> query
Rule 1     query -> TRAEME seleccion DE_LA_TABLA tabla opcionales
Rule 2     query -> METE_EN tabla LPAREN columnas RPAREN LOS_VALORES LPAREN valores RPAREN
Rule 3     query -> ACTUALIZA tabla SETEA columna comparador valor opcionales
Rule 4     query -> BORRA_DE_LA tabla opcionales
Rule 5     query -> CAMBIA_LA_TABLA tabla alter_opcionales
Rule 6     opcionales -> where opcionales
Rule 7     opcionales -> group opcionales
Rule 8     opcionales -> having opcionales
Rule 9     opcionales -> join opcionales
Rule 10    opcionales -> comparador opcionales
Rule 11    opcionales -> valor opcionales
Rule 12    opcionales -> empty
Rule 13    alter_opcionales -> add
Rule 14    alter_opcionales -> drop_column
Rule 15    alter_opcionales -> rename
Rule 16    alter_opcionales -> create
Rule 17    alter_opcionales -> drop_table
Rule 18    join -> MEZCLANDO tabla EN columna comparador columna
Rule 19    join -> empty
Rule 20    group -> AGRUPANDO_POR columna
Rule 21    group -> empty
Rule 22    having -> WHERE_DEL_GROUP_BY condicion
Rule 23    having -> WHERE_DEL_GROUP_BY seleccion
Rule 24    having -> empty
Rule 25    where -> DONDE condicion
Rule 26    where -> empty
Rule 27    add -> AGREGA_LA_COLUMNA columna tipo_dato constraint
Rule 28    drop_column -> ELIMINA_LA_COLUMNA columna
Rule 29    drop_column -> empty
Rule 30    condicion -> columna comparador valor
Rule 31    condicion -> columna ENTRE valor COMMA valor
Rule 32    condicion -> columna ENTRE valor Y valor
Rule 33    rename -> RENOMBRA columna valor
Rule 34    rename -> empty
Rule 35    create -> CREA_LA_TABLA tabla
Rule 36    create -> empty
Rule 37    drop_table -> TIRA_LA_TABLA tabla
Rule 38    drop_table -> empty
Rule 39    seleccion -> TODO
Rule 40    seleccion -> columna
Rule 41    seleccion -> LOS_DISTINTOS columna
Rule 42    seleccion -> CONTANDO LPAREN ASTERISK RPAREN
Rule 43    seleccion -> CONTANDO LPAREN TODO RPAREN
Rule 44    tabla -> ID
Rule 45    columna -> ID
Rule 46    columnas -> columna
Rule 47    columnas -> columna COMMA columnas
Rule 48    comparador -> COMPARADORES
Rule 49    comparador -> empty
Rule 50    valor -> NUMBER
Rule 51    valor -> ID
Rule 52    valor -> STRING
Rule 53    valor -> LPAREN valor RPAREN
Rule 54    valores -> valor
Rule 55    valores -> valor COMMA valores
Rule 56    tipo_dato -> ID LPAREN NUMBER RPAREN
Rule 57    tipo_dato -> ID
Rule 58    constraint -> NO_NULO
Rule 59    constraint -> empty
Rule 60    empty -> <empty>

Terminals, with rules where they appear

ACTUALIZA            : 3
AGREGA_LA_COLUMNA    : 27
AGRUPANDO_POR        : 20
ASTERISK             : 42
BORRA_DE_LA          : 4
CAMBIA_LA_TABLA      : 5
CLAVE_PRIMA          : 
CLAVE_REFERENTE      : 
COMMA                : 31 47 55
COMO_MUCHO           : 
COMPARADORES         : 48
CONTANDO             : 42 43
CREA_LA_TABLA        : 35
DE_LA_TABLA          : 1
DONDE                : 25
ELIMINA_LA_COLUMNA   : 28
EN                   : 18
ENTRE                : 31 32
ES_NULO              : 
EXISTE               : 
ID                   : 44 45 51 56 57
LOS_DISTINTOS        : 41
LOS_VALORES          : 2
LPAREN               : 2 2 42 43 53 56
METE_EN              : 2
MEZCLANDO            : 18
NO_NULO              : 58
NUMBER               : 50 56
ORDENA_POR           : 
PARECIDO_A           : 
POR_DEFECTO          : 
RENOMBRA             : 33
RPAREN               : 2 2 42 43 53 56
SETEA                : 3
STRING               : 52
TIRA_LA_TABLA        : 37
TODO                 : 39 43
TRAEME               : 1
TRANSFORMA_A         : 
UNICO                : 
WHERE_DEL_GROUP_BY   : 22 23
Y                    : 32
error                : 

Nonterminals, with rules where they appear

add                  : 13
alter_opcionales     : 5
columna              : 3 18 18 20 27 28 30 31 32 33 40 41 46 47
columnas             : 2 47
comparador           : 3 10 18 30
condicion            : 22 25
constraint           : 27
create               : 16
drop_column          : 14
drop_table           : 17
empty                : 12 19 21 24 26 29 34 36 38 49 59
group                : 7
having               : 8
join                 : 9
opcionales           : 1 3 4 6 7 8 9 10 11
query                : 0
rename               : 15
seleccion            : 1 23
tabla                : 1 2 3 4 5 18 35 37
tipo_dato            : 27
valor                : 3 11 30 31 31 32 32 33 53 54 55
valores              : 2 55
where                : 6

Parsing method: LALR

state 0

    (0) S' -> . query
    (1) query -> . TRAEME seleccion DE_LA_TABLA tabla opcionales
    (2) query -> . METE_EN tabla LPAREN columnas RPAREN LOS_VALORES LPAREN valores RPAREN
    (3) query -> . ACTUALIZA tabla SETEA columna comparador valor opcionales
    (4) query -> . BORRA_DE_LA tabla opcionales
    (5) query -> . CAMBIA_LA_TABLA tabla alter_opcionales

    TRAEME          shift and go to state 2
    METE_EN         shift and go to state 3
    ACTUALIZA       shift and go to state 4
    BORRA_DE_LA     shift and go to state 5
    CAMBIA_LA_TABLA shift and go to state 6

    query                          shift and go to state 1

state 1

    (0) S' -> query .



state 2

    (1) query -> TRAEME . seleccion DE_LA_TABLA tabla opcionales
    (39) seleccion -> . TODO
    (40) seleccion -> . columna
    (41) seleccion -> . LOS_DISTINTOS columna
    (42) seleccion -> . CONTANDO LPAREN ASTERISK RPAREN
    (43) seleccion -> . CONTANDO LPAREN TODO RPAREN
    (45) columna -> . ID

    TODO            shift and go to state 8
    LOS_DISTINTOS   shift and go to state 10
    CONTANDO        shift and go to state 11
    ID              shift and go to state 12

    seleccion                      shift and go to state 7
    columna                        shift and go to state 9

state 3

    (2) query -> METE_EN . tabla LPAREN columnas RPAREN LOS_VALORES LPAREN valores RPAREN
    (44) tabla -> . ID

    ID              shift and go to state 14

    tabla                          shift and go to state 13

state 4

    (3) query -> ACTUALIZA . tabla SETEA columna comparador valor opcionales
    (44) tabla -> . ID

    ID              shift and go to state 14

    tabla                          shift and go to state 15

state 5

    (4) query -> BORRA_DE_LA . tabla opcionales
    (44) tabla -> . ID

    ID              shift and go to state 14

    tabla                          shift and go to state 16

state 6

    (5) query -> CAMBIA_LA_TABLA . tabla alter_opcionales
    (44) tabla -> . ID

    ID              shift and go to state 14

    tabla                          shift and go to state 17

state 7

    (1) query -> TRAEME seleccion . DE_LA_TABLA tabla opcionales

    DE_LA_TABLA     shift and go to state 18


state 8

    (39) seleccion -> TODO .

    DE_LA_TABLA     reduce using rule 39 (seleccion -> TODO .)
    DONDE           reduce using rule 39 (seleccion -> TODO .)
    AGRUPANDO_POR   reduce using rule 39 (seleccion -> TODO .)
    WHERE_DEL_GROUP_BY reduce using rule 39 (seleccion -> TODO .)
    MEZCLANDO       reduce using rule 39 (seleccion -> TODO .)
    COMPARADORES    reduce using rule 39 (seleccion -> TODO .)
    NUMBER          reduce using rule 39 (seleccion -> TODO .)
    ID              reduce using rule 39 (seleccion -> TODO .)
    STRING          reduce using rule 39 (seleccion -> TODO .)
    LPAREN          reduce using rule 39 (seleccion -> TODO .)
    $end            reduce using rule 39 (seleccion -> TODO .)


state 9

    (40) seleccion -> columna .

    DE_LA_TABLA     reduce using rule 40 (seleccion -> columna .)


state 10

    (41) seleccion -> LOS_DISTINTOS . columna
    (45) columna -> . ID

    ID              shift and go to state 12

    columna                        shift and go to state 19

state 11

    (42) seleccion -> CONTANDO . LPAREN ASTERISK RPAREN
    (43) seleccion -> CONTANDO . LPAREN TODO RPAREN

    LPAREN          shift and go to state 20


state 12

    (45) columna -> ID .

    DE_LA_TABLA     reduce using rule 45 (columna -> ID .)
    DONDE           reduce using rule 45 (columna -> ID .)
    AGRUPANDO_POR   reduce using rule 45 (columna -> ID .)
    WHERE_DEL_GROUP_BY reduce using rule 45 (columna -> ID .)
    MEZCLANDO       reduce using rule 45 (columna -> ID .)
    COMPARADORES    reduce using rule 45 (columna -> ID .)
    NUMBER          reduce using rule 45 (columna -> ID .)
    ID              reduce using rule 45 (columna -> ID .)
    STRING          reduce using rule 45 (columna -> ID .)
    LPAREN          reduce using rule 45 (columna -> ID .)
    $end            reduce using rule 45 (columna -> ID .)
    COMMA           reduce using rule 45 (columna -> ID .)
    RPAREN          reduce using rule 45 (columna -> ID .)
    ENTRE           reduce using rule 45 (columna -> ID .)


state 13

    (2) query -> METE_EN tabla . LPAREN columnas RPAREN LOS_VALORES LPAREN valores RPAREN

    LPAREN          shift and go to state 21


state 14

    (44) tabla -> ID .

    LPAREN          reduce using rule 44 (tabla -> ID .)
    SETEA           reduce using rule 44 (tabla -> ID .)
    DONDE           reduce using rule 44 (tabla -> ID .)
    AGRUPANDO_POR   reduce using rule 44 (tabla -> ID .)
    WHERE_DEL_GROUP_BY reduce using rule 44 (tabla -> ID .)
    MEZCLANDO       reduce using rule 44 (tabla -> ID .)
    COMPARADORES    reduce using rule 44 (tabla -> ID .)
    NUMBER          reduce using rule 44 (tabla -> ID .)
    ID              reduce using rule 44 (tabla -> ID .)
    STRING          reduce using rule 44 (tabla -> ID .)
    $end            reduce using rule 44 (tabla -> ID .)
    AGREGA_LA_COLUMNA reduce using rule 44 (tabla -> ID .)
    ELIMINA_LA_COLUMNA reduce using rule 44 (tabla -> ID .)
    RENOMBRA        reduce using rule 44 (tabla -> ID .)
    CREA_LA_TABLA   reduce using rule 44 (tabla -> ID .)
    TIRA_LA_TABLA   reduce using rule 44 (tabla -> ID .)
    EN              reduce using rule 44 (tabla -> ID .)


state 15

    (3) query -> ACTUALIZA tabla . SETEA columna comparador valor opcionales

    SETEA           shift and go to state 22


state 16

    (4) query -> BORRA_DE_LA tabla . opcionales
    (6) opcionales -> . where opcionales
    (7) opcionales -> . group opcionales
    (8) opcionales -> . having opcionales
    (9) opcionales -> . join opcionales
    (10) opcionales -> . comparador opcionales
    (11) opcionales -> . valor opcionales
    (12) opcionales -> . empty
    (25) where -> . DONDE condicion
    (26) where -> . empty
    (20) group -> . AGRUPANDO_POR columna
    (21) group -> . empty
    (22) having -> . WHERE_DEL_GROUP_BY condicion
    (23) having -> . WHERE_DEL_GROUP_BY seleccion
    (24) having -> . empty
    (18) join -> . MEZCLANDO tabla EN columna comparador columna
    (19) join -> . empty
    (48) comparador -> . COMPARADORES
    (49) comparador -> . empty
    (50) valor -> . NUMBER
    (51) valor -> . ID
    (52) valor -> . STRING
    (53) valor -> . LPAREN valor RPAREN
    (60) empty -> .

  ! shift/reduce conflict for DONDE resolved as shift
  ! shift/reduce conflict for AGRUPANDO_POR resolved as shift
  ! shift/reduce conflict for WHERE_DEL_GROUP_BY resolved as shift
  ! shift/reduce conflict for MEZCLANDO resolved as shift
  ! shift/reduce conflict for COMPARADORES resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
    DONDE           shift and go to state 31
    AGRUPANDO_POR   shift and go to state 32
    WHERE_DEL_GROUP_BY shift and go to state 33
    MEZCLANDO       shift and go to state 34
    COMPARADORES    shift and go to state 35
    NUMBER          shift and go to state 36
    ID              shift and go to state 37
    STRING          shift and go to state 38
    LPAREN          shift and go to state 39
    $end            reduce using rule 60 (empty -> .)

  ! DONDE           [ reduce using rule 60 (empty -> .) ]
  ! AGRUPANDO_POR   [ reduce using rule 60 (empty -> .) ]
  ! WHERE_DEL_GROUP_BY [ reduce using rule 60 (empty -> .) ]
  ! MEZCLANDO       [ reduce using rule 60 (empty -> .) ]
  ! COMPARADORES    [ reduce using rule 60 (empty -> .) ]
  ! NUMBER          [ reduce using rule 60 (empty -> .) ]
  ! ID              [ reduce using rule 60 (empty -> .) ]
  ! STRING          [ reduce using rule 60 (empty -> .) ]
  ! LPAREN          [ reduce using rule 60 (empty -> .) ]

    opcionales                     shift and go to state 23
    where                          shift and go to state 24
    group                          shift and go to state 25
    having                         shift and go to state 26
    join                           shift and go to state 27
    comparador                     shift and go to state 28
    valor                          shift and go to state 29
    empty                          shift and go to state 30

state 17

    (5) query -> CAMBIA_LA_TABLA tabla . alter_opcionales
    (13) alter_opcionales -> . add
    (14) alter_opcionales -> . drop_column
    (15) alter_opcionales -> . rename
    (16) alter_opcionales -> . create
    (17) alter_opcionales -> . drop_table
    (27) add -> . AGREGA_LA_COLUMNA columna tipo_dato constraint
    (28) drop_column -> . ELIMINA_LA_COLUMNA columna
    (29) drop_column -> . empty
    (33) rename -> . RENOMBRA columna valor
    (34) rename -> . empty
    (35) create -> . CREA_LA_TABLA tabla
    (36) create -> . empty
    (37) drop_table -> . TIRA_LA_TABLA tabla
    (38) drop_table -> . empty
    (60) empty -> .

    AGREGA_LA_COLUMNA shift and go to state 46
    ELIMINA_LA_COLUMNA shift and go to state 47
    RENOMBRA        shift and go to state 49
    CREA_LA_TABLA   shift and go to state 50
    TIRA_LA_TABLA   shift and go to state 51
    $end            reduce using rule 60 (empty -> .)

    alter_opcionales               shift and go to state 40
    add                            shift and go to state 41
    drop_column                    shift and go to state 42
    rename                         shift and go to state 43
    create                         shift and go to state 44
    drop_table                     shift and go to state 45
    empty                          shift and go to state 48

state 18

    (1) query -> TRAEME seleccion DE_LA_TABLA . tabla opcionales
    (44) tabla -> . ID

    ID              shift and go to state 14

    tabla                          shift and go to state 52

state 19

    (41) seleccion -> LOS_DISTINTOS columna .

    DE_LA_TABLA     reduce using rule 41 (seleccion -> LOS_DISTINTOS columna .)
    DONDE           reduce using rule 41 (seleccion -> LOS_DISTINTOS columna .)
    AGRUPANDO_POR   reduce using rule 41 (seleccion -> LOS_DISTINTOS columna .)
    WHERE_DEL_GROUP_BY reduce using rule 41 (seleccion -> LOS_DISTINTOS columna .)
    MEZCLANDO       reduce using rule 41 (seleccion -> LOS_DISTINTOS columna .)
    COMPARADORES    reduce using rule 41 (seleccion -> LOS_DISTINTOS columna .)
    NUMBER          reduce using rule 41 (seleccion -> LOS_DISTINTOS columna .)
    ID              reduce using rule 41 (seleccion -> LOS_DISTINTOS columna .)
    STRING          reduce using rule 41 (seleccion -> LOS_DISTINTOS columna .)
    LPAREN          reduce using rule 41 (seleccion -> LOS_DISTINTOS columna .)
    $end            reduce using rule 41 (seleccion -> LOS_DISTINTOS columna .)


state 20

    (42) seleccion -> CONTANDO LPAREN . ASTERISK RPAREN
    (43) seleccion -> CONTANDO LPAREN . TODO RPAREN

    ASTERISK        shift and go to state 53
    TODO            shift and go to state 54


state 21

    (2) query -> METE_EN tabla LPAREN . columnas RPAREN LOS_VALORES LPAREN valores RPAREN
    (46) columnas -> . columna
    (47) columnas -> . columna COMMA columnas
    (45) columna -> . ID

    ID              shift and go to state 12

    columnas                       shift and go to state 55
    columna                        shift and go to state 56

state 22

    (3) query -> ACTUALIZA tabla SETEA . columna comparador valor opcionales
    (45) columna -> . ID

    ID              shift and go to state 12

    columna                        shift and go to state 57

state 23

    (4) query -> BORRA_DE_LA tabla opcionales .

    $end            reduce using rule 4 (query -> BORRA_DE_LA tabla opcionales .)


state 24

    (6) opcionales -> where . opcionales
    (6) opcionales -> . where opcionales
    (7) opcionales -> . group opcionales
    (8) opcionales -> . having opcionales
    (9) opcionales -> . join opcionales
    (10) opcionales -> . comparador opcionales
    (11) opcionales -> . valor opcionales
    (12) opcionales -> . empty
    (25) where -> . DONDE condicion
    (26) where -> . empty
    (20) group -> . AGRUPANDO_POR columna
    (21) group -> . empty
    (22) having -> . WHERE_DEL_GROUP_BY condicion
    (23) having -> . WHERE_DEL_GROUP_BY seleccion
    (24) having -> . empty
    (18) join -> . MEZCLANDO tabla EN columna comparador columna
    (19) join -> . empty
    (48) comparador -> . COMPARADORES
    (49) comparador -> . empty
    (50) valor -> . NUMBER
    (51) valor -> . ID
    (52) valor -> . STRING
    (53) valor -> . LPAREN valor RPAREN
    (60) empty -> .

  ! shift/reduce conflict for DONDE resolved as shift
  ! shift/reduce conflict for AGRUPANDO_POR resolved as shift
  ! shift/reduce conflict for WHERE_DEL_GROUP_BY resolved as shift
  ! shift/reduce conflict for MEZCLANDO resolved as shift
  ! shift/reduce conflict for COMPARADORES resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
    DONDE           shift and go to state 31
    AGRUPANDO_POR   shift and go to state 32
    WHERE_DEL_GROUP_BY shift and go to state 33
    MEZCLANDO       shift and go to state 34
    COMPARADORES    shift and go to state 35
    NUMBER          shift and go to state 36
    ID              shift and go to state 37
    STRING          shift and go to state 38
    LPAREN          shift and go to state 39
    $end            reduce using rule 60 (empty -> .)

  ! DONDE           [ reduce using rule 60 (empty -> .) ]
  ! AGRUPANDO_POR   [ reduce using rule 60 (empty -> .) ]
  ! WHERE_DEL_GROUP_BY [ reduce using rule 60 (empty -> .) ]
  ! MEZCLANDO       [ reduce using rule 60 (empty -> .) ]
  ! COMPARADORES    [ reduce using rule 60 (empty -> .) ]
  ! NUMBER          [ reduce using rule 60 (empty -> .) ]
  ! ID              [ reduce using rule 60 (empty -> .) ]
  ! STRING          [ reduce using rule 60 (empty -> .) ]
  ! LPAREN          [ reduce using rule 60 (empty -> .) ]

    where                          shift and go to state 24
    opcionales                     shift and go to state 58
    group                          shift and go to state 25
    having                         shift and go to state 26
    join                           shift and go to state 27
    comparador                     shift and go to state 28
    valor                          shift and go to state 29
    empty                          shift and go to state 30

state 25

    (7) opcionales -> group . opcionales
    (6) opcionales -> . where opcionales
    (7) opcionales -> . group opcionales
    (8) opcionales -> . having opcionales
    (9) opcionales -> . join opcionales
    (10) opcionales -> . comparador opcionales
    (11) opcionales -> . valor opcionales
    (12) opcionales -> . empty
    (25) where -> . DONDE condicion
    (26) where -> . empty
    (20) group -> . AGRUPANDO_POR columna
    (21) group -> . empty
    (22) having -> . WHERE_DEL_GROUP_BY condicion
    (23) having -> . WHERE_DEL_GROUP_BY seleccion
    (24) having -> . empty
    (18) join -> . MEZCLANDO tabla EN columna comparador columna
    (19) join -> . empty
    (48) comparador -> . COMPARADORES
    (49) comparador -> . empty
    (50) valor -> . NUMBER
    (51) valor -> . ID
    (52) valor -> . STRING
    (53) valor -> . LPAREN valor RPAREN
    (60) empty -> .

  ! shift/reduce conflict for DONDE resolved as shift
  ! shift/reduce conflict for AGRUPANDO_POR resolved as shift
  ! shift/reduce conflict for WHERE_DEL_GROUP_BY resolved as shift
  ! shift/reduce conflict for MEZCLANDO resolved as shift
  ! shift/reduce conflict for COMPARADORES resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
    DONDE           shift and go to state 31
    AGRUPANDO_POR   shift and go to state 32
    WHERE_DEL_GROUP_BY shift and go to state 33
    MEZCLANDO       shift and go to state 34
    COMPARADORES    shift and go to state 35
    NUMBER          shift and go to state 36
    ID              shift and go to state 37
    STRING          shift and go to state 38
    LPAREN          shift and go to state 39
    $end            reduce using rule 60 (empty -> .)

  ! DONDE           [ reduce using rule 60 (empty -> .) ]
  ! AGRUPANDO_POR   [ reduce using rule 60 (empty -> .) ]
  ! WHERE_DEL_GROUP_BY [ reduce using rule 60 (empty -> .) ]
  ! MEZCLANDO       [ reduce using rule 60 (empty -> .) ]
  ! COMPARADORES    [ reduce using rule 60 (empty -> .) ]
  ! NUMBER          [ reduce using rule 60 (empty -> .) ]
  ! ID              [ reduce using rule 60 (empty -> .) ]
  ! STRING          [ reduce using rule 60 (empty -> .) ]
  ! LPAREN          [ reduce using rule 60 (empty -> .) ]

    group                          shift and go to state 25
    opcionales                     shift and go to state 59
    where                          shift and go to state 24
    having                         shift and go to state 26
    join                           shift and go to state 27
    comparador                     shift and go to state 28
    valor                          shift and go to state 29
    empty                          shift and go to state 30

state 26

    (8) opcionales -> having . opcionales
    (6) opcionales -> . where opcionales
    (7) opcionales -> . group opcionales
    (8) opcionales -> . having opcionales
    (9) opcionales -> . join opcionales
    (10) opcionales -> . comparador opcionales
    (11) opcionales -> . valor opcionales
